make sure there's no wait time on z-index

--- a/elements/simple-picker/src/simple-picker.css
+++ b/elements/simple-picker/src/simple-picker.css
@@ -135,6 +135,7 @@ label:not([hidden]) {
   position: absolute;  
   top: var(--simple-picker-options-top);
   z-index: 2;
+  transition: z-index 0s;
 }
 
 :host([expanded]:not([disabled])) #collapse {
@@ -155,6 +156,7 @@ label:not([hidden]) {
   max-height: var(--simple-picker-options-max-height, 250px);
   overflow-y: auto; 
   border: var(--simple-picker-options-border);
+  transition: z-index 0s;
 } 
 
 .rows:focus-within {
@@ -188,6 +190,7 @@ simple-picker-option {
   color: var(--simple-picker-color, currentColor);
   background-color: var(--simple-picker-options-background-color, #fff);
   transition: max-height 2s;
+  transition: z-index 0s;
 }
 
 simple-picker-option[selected] {
